// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> should render Counter with default props 1`] = `
.c0 {
  background-color: hsla(216,15%,54%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast information intent Counter 1`] = `
.c0 {
  background-color: hsla(193,100%,35%,1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(193,100%,35%,1);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.information.highContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast negative intent Counter 1`] = `
.c0 {
  background-color: hsla(8,73%,47%,1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(8,73%,47%,1);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.negative.highContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast neutral intent Counter 1`] = `
.c0 {
  background-color: hsla(216,33%,29%,1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(216,33%,29%,1);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.highContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast notice intent Counter 1`] = `
.c0 {
  background-color: hsla(38,97%,38%,1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(38,97%,38%,1);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.notice.highContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast positive intent Counter 1`] = `
.c0 {
  background-color: hsla(160,100%,26%,1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(160,100%,26%,1);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.positive.highContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render large size Counter 1`] = `
.c0 {
  background-color: hsla(216,15%,54%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast information intent Counter 1`] = `
.c0 {
  background-color: hsla(193,100%,35%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(193,100%,35%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(193,100%,35%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.information.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast negative intent Counter 1`] = `
.c0 {
  background-color: hsla(9,91%,56%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(9,91%,56%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(8,73%,47%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.negative.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast neutral intent Counter 1`] = `
.c0 {
  background-color: hsla(216,15%,54%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast notice intent Counter 1`] = `
.c0 {
  background-color: hsla(36,100%,44%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(36,100%,44%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(38,97%,38%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.notice.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast positive intent Counter 1`] = `
.c0 {
  background-color: hsla(155,100%,31%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(155,100%,31%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(160,100%,26%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.positive.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render medium size Counter 1`] = `
.c0 {
  background-color: hsla(216,15%,54%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 8px;
  padding-left: 8px;
}

.c1 {
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="75"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render small size Counter 1`] = `
.c0 {
  background-color: hsla(216,15%,54%,0.09);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-right: 4px;
  padding-left: 4px;
}

.c1 {
  background-color: hsla(216,15%,54%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      data-blade-component="counter"
      display="inline-flex"
      overflow="hidden"
    >
      <p
        class="c3 c4"
        color="feedback.text.neutral.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="25"
        font-style="normal"
        font-weight="regular"
      >
        20
      </p>
    </div>
  </div>
</div>
`;
